Fix: fixed img size to avoid layout shifts

--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -84,7 +84,7 @@ body {
 
 .product-title {
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-block: 12px;
 }
 
 .product-price {
